# ddharmon-ui

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dev.sh  pyproject.toml  serve.sh
.github/workflows/: leak-scan.yml
.planning/: .continue-here.md  HANDOFF.json
backend/: __init__.py  analysis_ideas.py  app.py  auth.py  db.py  demos.py  jobs.py  notebook.py  runner.py  seed.py
backend/demos/: analysis_ideas.json  aou_clsa_ukbb.json  manifest.json
backend/demos/data/: aireadi.csv  aou.csv  clsa.csv  mesa.csv  ukbb.csv
backend/engine/: __init__.py  adapter.py  contract.py  llm.py
deploy/: .env.example  README.md  ddharmon.service  nginx-ddharmon.conf
docs/: GUI-BUILD-PLAN.md  deployment_architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/static-data/: demos.json  jobs.json  result-demo-aou_clsa_ukbb.json  result-sample-aou-clsa.json  result-sample-cross-cohort.json
frontend/public/static-data/exports/: sample-aou-clsa.decisions.csv  sample-aou-clsa.eitl.tsv  sample-aou-clsa.py.ipynb  sample-aou-clsa.r.ipynb  sample-aou-clsa.records.json  sample-cross-cohort.decisions.csv  sample-cross-cohort.eitl.tsv  sample-cross-cohort.py.ipynb  sample-cross-cohort.r.ipynb  sample-cross-cohort.records.json
frontend/src/: App.tsx  auth.tsx  index.css  types.ts
frontend/src/components/: AppShell.tsx  active-runs-indicator.tsx  analysis-ideas.tsx  analytics.tsx  embedding-atlas.tsx  global-status-banner.tsx  match-sankey.tsx  member-variables.tsx  ph-logo.tsx  phenome-mark.tsx  plot-info.tsx  preview-shell.tsx  rerun-action.tsx  source-rows.tsx  stop-run-action.tsx  under-review-banner.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  table.tsx  toast.tsx
frontend/src/data/: benchmarks.ts  demo-column-assignments.json  design-choices.ts  pipeline-stages.ts  roadmap.ts
frontend/src/hooks/: use-harmonize-stream.ts  use-theme.ts
frontend/src/lib/: api.ts  chart.ts  column-prefill.ts  links.ts
frontend/src/pages/: analysis-ideas.tsx  benchmarks.tsx  dashboard.tsx  demo.tsx  deployment-architecture.tsx  design-choices.tsx  guide.tsx  home.tsx  jobs.tsx  landing.tsx  methods.tsx  phenome-health.tsx  preview-composite.tsx  preview-knowledge-graph.tsx  preview-payoff.tsx  preview-reproducibility.tsx  preview-restructure.tsx  related-work.tsx  roadmap.tsx  workbench.tsx
scripts/: build_demo_analysis_ideas.py  build_demo_bundle.py  build_demo_data.py  build_demos.py  build_static_fixtures.py  deploy-preview.sh  leak_scan.py
tests/: conftest.py  test_auth.py  test_backend.py  test_demo_bundle.py  test_features.py  test_retention.py
