[project]
name = "ddharmon-ui"
version = "1.1.0"
description = "Web GUI for the ddharmon data-dictionary harmonization pipeline (FastAPI + React/Vite/shadcn)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core harmonization library. Pulls the FULL ML stack via [all]
    # (sentence-transformers, BERTopic/UMAP/HDBSCAN, anthropic, …) — the pipeline
    # runner imports these directly, so the bare library is not enough.
    #
    # ddharmon is PUBLIC on PyPI — a plain version pin, no auth or git ref needed. Pinned >=1.1.0:
    # the UI's GenCDE surface (synthesis + transform-spec generation) needs the M12 core stages.
    # For local dev against a checkout instead, see README.md ("Develop against a local core").
    "ddharmon[all]>=1.1.0",

    # Web layer (the only thing this repo adds on top of ddharmon).
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",

    # Clerk SSO: verify the session JWT (RS256) against Clerk's JWKS (backend/auth.py). Imported
    # lazily and inert unless CLERK_* env is set, but the deploy needs it installed for the gate to
    # work. [crypto] pulls the RSA backend PyJWKClient requires.
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "pyright>=1.1.350",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# The GUI API mirrors the JS frontend's camelCase request bodies on purpose.
"backend/app.py" = ["N815"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
exclude = [
    "frontend/",
    "tests/",
    ".venv/",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
